src/objects/zaapit__ZaapIT_Table_user_configuration__c.object
<CustomObject>
    <description>ZaapIT Table user configuration</description>
    <fields>
        <fullName>zaapit__Favorite_View__c</fullName>
        <label>Favorite View</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__ZaapIT_Table_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZaapIT Table - View</label>
        <referenceTo>zaapit__zaapit_editable_tb__c</referenceTo>
        <relationshipLabel>ZaapIT Table user configurations</relationshipLabel>
        <relationshipName>ZaapIT_Table_user_configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zaapit__text1__c</fullName>
        <label>text1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ZaapIT Table user configuration</label>
    <nameField>
        <label>ZaapIT Table user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZaapIT Table user configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>